--- a/styles.css
+++ b/styles.css
@@ -3,22 +3,25 @@ body {
   font-family: Arial, sans-serif;
   color: #333;
   background-color: #f4f4f4;
+  align-items: center;
 }
 
 header {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   padding: 10px 0;
+  font-family: Arial, sans-serif;
 }
 
 nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1200px;
+  max-width: 1440px;
   margin: 0 auto;
-  padding: 0 20px;
-}
+  padding: 0 16px;
+  font-family: 'Inter', sans-serif;
+  }
 
 .logo img,
 .logo svg {
@@ -30,7 +33,7 @@ nav {
 .nav-links {
   list-style: none;
   display: flex;
-  gap: 20px;
+  gap: 50px;
   margin: 0;
   padding: 0;
 }
@@ -41,42 +44,45 @@ nav {
 
 .nav-links a {
   text-decoration: none;
-  color: #333;
-  font-weight: bold;
+  color: #18191F;
 }
 
 .auth-buttons button {
   background-color: #fff;
-  border: 2px solid #28a745;
+  border: none;
   color: #28a745;
   padding: 8px 16px;
   cursor: pointer;
   border-radius: 5px;
   font-size: 16px;
   margin-left: 10px;
-}
-
-.auth-buttons .signup {
+  }
+  
+  .auth-buttons .signup {
   background-color: #28a745;
   color: #fff;
-}
+  }
 
 .hero {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 60px 20px;
-  max-width: 1200px;
+  max-width: 1440px;
   margin: 0 auto;
+  color: #F5F7FA;
 }
 
 .hero-content {
-  max-width: 500px;
+  max-width: 657px;
 }
 
 .hero-content h1 {
-  font-size: 48px;
+  font-size: 64px;
   margin-bottom: 20px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  color: #4D4D4D; 
+  font-family: 'Inter', sans-serif;
 }
 
 .hero-content h1 span {
@@ -84,109 +90,173 @@ nav {
 }
 
 .hero-content p {
-  font-size: 18px;
+  font-size: 16px;
   margin-bottom: 30px;
+  font-family: 'Inter', sans-serif;
+  line-height: 24px;
+  font-weight: 400;
+  color: #717171;
 }
 
 .hero-content .register {
-  background-color: #28a745;
+  background-color: #4CAF4F;
   color: #fff;
   border: none;
-  padding: 15px 30px;
+  padding: 14px 32px;
   font-size: 18px;
   cursor: pointer;
-  border-radius: 5px;
+  border-radius: 4px;
 }
 
 .hero-image img {
-  width: 500px;
-  height: auto;
+  width: 391px;
+  height: 407px;
+}
+
+.dots-image img {
+  width: 46px;
+  height: 10px;
+  gap: 8px;
+  margin-right: 8px;  
 }
 
 .clients {
   background-color: #fff;
   padding: 40px 20px;
   text-align: center;
-  max-width: 1200px;
+  align-items: center;
   margin: 0 auto;
+  font-family: 'Inter', sans-serif;
 }
 
 .clients h2 {
-  font-size: 32px;
+  font-size: 36px;
   margin-bottom: 10px;
+  color: #4D4D4D;
 }
 
 .clients p {
   font-size: 18px;
   margin-bottom: 30px;
+  color: #717171;
 }
 
 .client-logos {
   display: flex;
-  justify-content: space-around;
+  justify-content: center; /* 수직 가운데 정렬 */
+  align-items: center; /* 수평 가운데 정렬 */
+  margin: 0 auto; /* 수평 가운데 정렬 */
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 8%;
 }
 
 .client-logos img {
-  width: 100px;
-  height: auto;
+  width: 48px;
+  height: 48px;
 }
 
 .community-management {
-  background-color: #f9f9f9;
+  background-color: #fff;
   padding: 40px 20px;
-  text-align: center;
+  text-align: center; /* 수평 가운데 정렬 */
+  display: flex; /* Flexbox 사용 */
+  flex-direction: column; /* 세로 방향 정렬 */
+  justify-content: center; /* 수직 가운데 정렬 */
+  align-items: center; /* 수평 가운데 정렬 */
+  margin: 0 auto; /* 수평 가운데 정렬 */
+  font-family: 'Inter', sans-serif;
 }
 
 .community-management h2 {
-  font-size: 32px;
+  font-size: 36px;
   margin-bottom: 10px;
+  color: #4D4D4D;
 }
 
 .community-management p {
-  font-size: 18px;
+  font-size: 16px;
+  line-height: 24px;
   margin-bottom: 30px;
+  color: #717171;
 }
 
 .community-options {
+  text-align: center;
+  max-width: 1440px;
   display: flex;
-  justify-content: space-around;
+  justify-content: center; /* Center the items horizontally */
+  align-items: center; /* Center the items vertically */
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 3%;
 }
 
 .community-options .option {
   background-color: #fff;
-  padding: 20px;
-  border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 24px, 32px;
+  border-radius: 8px;
+  box-shadow: 0px 2px 4px 0px #ABBED133;
   width: 30%;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8;
 }
 
-.community-options .option img {
-  width: 40px;
-  height: 40px;
-  margin-bottom: 20px;
+.icon1 {
+  position: relative;
+  width: 48px;
+  height: 48px;
+}
+
+.image-wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.background-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 18px 5px 10px 5px;
+  color: #E8F5E9;
+  box-shadow: 0px 4px 4px 0px #00000040;
+
+}
+
+.foreground-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .community-options .option h3 {
   font-size: 20px;
   margin-bottom: 10px;
+  color: #4D4D4D;
 }
 
 .community-options .option p {
-  font-size: 16px;
+  font-size: 14px;
+  color: #717171;
+  width: 70%;
 }
 
 .featured-article {
+  background-color: #fff;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   padding: 60px 20px;
-  max-width: 1200px;
+  text-align: left; /* 수평 가운데 정렬 */
   margin: 0 auto;
+  font-family: 'Inter', sans-serif;
+  gap: 5%;
 }
 
 .featured-article .article-image img {
@@ -195,42 +265,50 @@ nav {
 }
 
 .featured-article .article-content {
-  max-width: 500px;
+  max-width: 600px;
 }
 
 .featured-article .article-content h3 {
-  font-size: 24px;
+  font-size: 36px;
   margin-bottom: 20px;
+  line-height: 44px;
+  color: #4D4D4D;
 }
 
 .featured-article .article-content p {
-  font-size: 16px;
+  font-size: 14px;
   margin-bottom: 30px;
+  color: #717171;
 }
 
 .featured-article .learn-more {
-  background-color: #28a745;
+  background-color: #4CAF4F;
   color: #fff;
   border: none;
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
-  border-radius: 5px;
+  border-radius: 4px;
+  gap: 10px;
 }
 
 .statistics {
-  background-color: #f9f9f9;
+  background-color: #F5F7FA;
   padding: 40px 20px;
   text-align: center;
+  display: flex;
+  font-family: 'Inter', sans-serif;
 }
 
 .statistics-header {
-  margin-bottom: 30px;
+  margin-left: 20%;
 }
 
 .statistics-header h2 {
-  font-size: 32px;
+  font-size: 36px;
   margin-bottom: 10px;
+  text-align: left; /* 텍스트 가운데 정렬 */
+  color: #4D4D4D;
 }
 
 .statistics-header h2 span {
@@ -238,38 +316,43 @@ nav {
 }
 
 .statistics-header p {
-  font-size: 18px;
+  font-size: 16px;
+  text-align: left; /* 텍스트 가운데 정렬 */
 }
 
 .statistics-numbers {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around; /* 아이템을 균등하게 분배 */
   align-items: center;
-  max-width: 1200px;
-  margin: 0 auto;
+  margin-left: 10%;
 }
 
-.stat-item {
+.row .stat-item {
   display: flex;
+  flex-direction: row; /* 아이템을 세로로 배치 */
   align-items: center;
-  gap: 10px;
-  text-align: left;
+  text-align: center; /* 텍스트 가운데 정렬 */
 }
 
 .stat-item img {
   width: 40px;
   height: 40px;
+  margin-bottom: 10px; /* 이미지와 텍스트 사이 간격 추가 */
+  color: #4CAF4F;
 }
 
 .stat-item h3 {
-  font-size: 24px;
+  font-size: 28px;
   margin: 0;
+  color: #4D4D4D;
 }
 
 .stat-item p {
   font-size: 16px;
   margin: 0;
+  color: #717171;
 }
+
 
 .footer-design {
   background-color: #f9f9f9;
