--- a/styles.css
+++ b/styles.css
@@ -285,23 +285,33 @@ nav {
 }
 
 .footer-design-image img {
-  width: 300px;
+  width: 80%;
   height: auto;
 }
 
 .footer-design-text {
-  max-width: 500px;
+  max-width: 60%;
 }
 
 .footer-design-text h3 {
-  font-size: 24px;
-  margin-bottom: 20px;
+  font-family: Inter;
+  font-size: 36px;
+  font-weight: 600;
+  line-height: 44px;
+  text-align: left;
+  color: #4D4D4D;
 }
 
 .footer-design-text p {
-  font-size: 16px;
   margin-bottom: 30px;
-}
+  color: #717171;
+  
+  font-family: Inter;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  text-align: left;
+  }
 
 .footer-design-text .learn-more {
   background-color: #28a745;
@@ -314,38 +324,45 @@ nav {
 }
 
 .testimonial {
-  background-color: #fff;
-  padding: 60px 20px;
+  background-color: #F5F7FA;
   text-align: center;
-  max-width: 1200px;
   margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  padding: 5%;
 }
 
 .testimonial-content {
-  display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 40px 20px;
+  margin-left: 5%;
 }
 
-.testimonial-image img {
-  width: 150px;
-  height: auto;
+.testimonial-image {
+  width: 35%;
+  height:35%;
+  border-radius: 8px 0px 0px 0px;
+  opacity: 0px;
 }
 
 .testimonial-text {
-  max-width: 800px;
   text-align: left;
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  text-align: left;
+  color: #717171;
 }
 
 .testimonial-text p {
   font-size: 16px;
-  margin-bottom: 20px;
 }
 
 .testimonial-text h4 {
   font-size: 18px;
   margin-bottom: 5px;
+  color: #4CAF4F;
 }
 
 .testimonial-text .position {
@@ -353,28 +370,60 @@ nav {
   color: #777;
 }
 
+.testimonial-customers {
+  display: flex;
+}
+
+.customer-logos {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 60%;
+}
+
 .meet-all-customers {
-  padding: 20px;
+  padding: 30px;
   text-align: center;
 }
 
 .meet-all-customers a {
-  color: #28a745;
+  color: #4CAF4F;
   text-decoration: none;
   font-size: 16px;
+  font-family: Inter;
+  font-size: 15px;
+  font-weight: 600;
+  text-align: left;
+}
+
+.meet-all-customers a:hover {
+  color:#F24821;
 }
 
 .additional-content {
-  background-color: #fff;
-  padding: 60px 20px;
+  background-color: #ffffff;
   text-align: center;
-  max-width: 1200px;
   margin: 0 auto;
+  padding: 1%;
+}
+
+.additional-content h2 {
+  font-family: Inter;
+  font-size: 36px;
+  font-weight: 600;
+  line-height: 44px;
+  text-align: center;
 }
 
 .additional-content p {
-  font-size: 18px;
-  margin-bottom: 30px;
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: center;
+  color:#717171;
+  width: 45%;
+  margin: 0 auto;
 }
 
 .articles {
@@ -385,12 +434,33 @@ nav {
 }
 
 .article {
-  background-color: #fff;
   padding: 20px;
   border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  width: 30%;
+  width: 25%;
   text-align: center;
+  justify-content: center;
+}
+
+.article-description {
+  background-color: #F5F7FA;
+  border-radius: 5px;
+  box-shadow: 0px 8px 16px 0px #ABBED166;
+  width: 90%;
+  height: 40%;
+
+  position: relative;
+  top:-20%;
+  left:5%;
+}
+
+.article-description h3{
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 28px;
+  text-align: center;
+  padding: 7%;
+  color: #717171;
 }
 
 .article img {
@@ -405,20 +475,34 @@ nav {
 }
 
 .article .readmore {
-  color: #28a745;
+  color: #4CAF4F;
   text-decoration: none;
-  font-size: 16px;
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 28px;
+  text-align: left;
+}
+
+.article .readmore:hover {
+  color:#F24821;
 }
 
 .cta {
-  background-color: #f9f9f9;
+  background-color: #F5F7FA;
   padding: 60px 20px;
   text-align: center;
+  justify-content: center;
 }
 
 .cta h2 {
-  font-size: 32px;
-  margin-bottom: 20px;
+  font-family: Inter;
+  font-size: 64px;
+  font-weight: 600;
+  text-align: center;
+  width: 60%;
+  margin: 0 auto;
+  padding-bottom: 5%;
 }
 
 .cta .get-demo {
@@ -429,10 +513,11 @@ nav {
   font-size: 18px;
   cursor: pointer;
   border-radius: 5px;
+  box-shadow: 0px 4px 4px 0px #00000040;
 }
 
 footer {
-  background-color: #333;
+  background-color: #263238;
   color: #fff;
   padding: 40px 20px;
   text-align: center;
@@ -440,18 +525,26 @@ footer {
 
 .footer-content {
   display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  max-width: 1200px;
-  margin: 0 auto;
+  justify-content: center; 
+  align-items: center; 
 }
 
-.footer-logo img {
-  width: 150px;
-  height: auto;
+.footer-info {
+  flex:1;
+  padding-left: 3%;
+}
+
+.footer-info p{
+  text-align: left;
+}
+
+.footer-logo {
+  display: flex;
+  align-items: start;
 }
 
 .footer-columns {
+  flex:2;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -466,6 +559,7 @@ footer {
 .footer-column h3 {
   font-size: 20px;
   margin-bottom: 20px;
+  text-align: left;
 }
 
 .footer-column ul {
@@ -476,6 +570,7 @@ footer {
 
 .footer-column ul li {
   margin-bottom: 10px;
+  text-align: left;
 }
 
 .footer-column ul li a {
@@ -490,36 +585,45 @@ footer {
 }
 
 .footer-column form input {
-  padding: 10px;
   border: none;
-  border-radius: 5px;
   font-size: 16px;
+  background-color:transparent;
+  margin: 10px;
+}
+
+.input-container {
+  display:flex;
+  justify-content: space-between;
+  background-color:#515B60;
+  border-radius: 5px;
+}
+
+.footer-column form input::placeholder {
+  color:#D9DBE1;
 }
 
 .footer-column form button {
-  background-color: #28a745;
-  color: #fff;
   border: none;
   padding: 10px;
   font-size: 16px;
   cursor: pointer;
-  border-radius: 5px;
+  background-color:transparent;
 }
 
 .footer-bottom {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 20px;
+  margin: 10px 0;
 }
 
-.footer-bottom p {
-  margin: 0;
+.footer-bottom p{
+  text-align: left;
+  margin-left:10px;
 }
 
 .social-icons {
   display: flex;
-  gap: 10px;
+  gap: 15px; /* Adjust the gap between icons */
+  justify-content: start; /* Center the icons */
+  margin-top: 20px; /* Add space above the icons */
 }
 
 .social-icons a img {
