--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,12 @@ body {
   margin: 0;
   font-family: Arial, sans-serif;
   color: #333;
-  background-color: #f4f4f4;
+  background-color: #ffffff;
   align-items: center;
 }
 
 header {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: #F5F7FA;;
   padding: 10px 0;
   font-family: Arial, sans-serif;
 }
@@ -64,9 +63,17 @@ nav {
   }
 
 .hero {
+  margin-top : 3%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #F5F7FA;;
+}
+
+.hero-card {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   padding: 60px 20px;
   max-width: 1440px;
   margin: 0 auto;
@@ -117,7 +124,7 @@ nav {
   width: 46px;
   height: 10px;
   gap: 8px;
-  margin-right: 8px;  
+  margin: 8px;  
 }
 
 .clients {
